Source/hedgehog/fds_fortran_interface.h

void fds_wall_bc_process_cells_kernel(int nm, double t, double dt, double dt_bc, int call_ht_1d);
void fds_wall_bc_finalize(int nm, double t, double dt_bc, int call_ht_1d);
void fds_cc_velocity_bc(double t, int nm, int estimated);
void fds_cc_project_velocity(int nm, double dt, int store_flag);
void fds_wall_velocity_no_gradh(int nm, double dt, int store_flag);
void fds_accumulate_rad_sums(double rad_q_partial, double kfst4_partial);
// Output subroutines (per-mesh)
void fds_update_global_outputs(double t, double dt, int nm);
void fds_dump_mesh_outputs(double t, double dt, int nm);
// Global output subroutines (called once after all meshes complete corrector)
void fds_exchange_global_outputs(double t, double dt);
void fds_update_controls(double t, double dt);
void fds_dump_global_outputs(double t, double dt);
void fds_write_strings(double t, double dt);
void fds_write_diagnostics(double t, double dt);
void fds_set_diagnostics(int icyc, double t, double dt);
void fds_flush_output_files();
// Barrier / exchange subroutines
void fds_mesh_exchange(int code);
void fds_post_receives(int code);
void fds_pressure_iteration(double t, double dt);
void fds_initialize_divergence_integrals();
void fds_exchange_divergence_info();
void fds_create_or_remove_obstructions(double t, double dt);
void fds_global_matrix_reassign(int force);
void fds_rte_source_correction();
void fds_stop_check(int end_code, double t, double dt);
int fds_get_stop_status();
void fds_synthetic_turbulence(double dt, double t, int nm);
void fds_hvac_calc(double t, double dt, int first);
void fds_set_baroclinic_false(int nm);
// WALL_BC helper functions
double fds_compute_wall_bc_dt_bc(double t);
void fds_increment_wall_counter();
int fds_check_call_ht_1d();
void fds_reset_wall_counter();
void fds_update_bc_clock(double t);