Source/hedgehog/fds_c_interface.f90


    IF (M%N_THIN_WALL_CELLS>0 .AND. HT_1D_FLAG) THEN
       DO ITW=1,M%N_THIN_WALL_CELLS
          TW => M%THIN_WALL(ITW)
          BC => M%BOUNDARY_COORD(TW%BC_INDEX)
          B1 => M%BOUNDARY_PROP1(TW%B1_INDEX)
          SF => SURFACE(TW%SURF_INDEX)
          CALL NEAR_SURFACE_GAS_VARIABLES_KERNEL(M,T,SF,BC,B1,TW=TW,THIN_WALL_INDEX=ITW)
          IF (TW%WALL_INDEX_M>0) THEN
             B1%HEAT_TRANS_COEF = HEAT_TRANSFER_COEFFICIENT(M,T,B1%TMP_G-B1%TMP_F,SF,WALL_INDEX_IN=TW%WALL_INDEX_M)
          ELSEIF (TW%WALL_INDEX_P>0) THEN
             B1%HEAT_TRANS_COEF = HEAT_TRANSFER_COEFFICIENT(M,T,B1%TMP_G-B1%TMP_F,SF,WALL_INDEX_IN=TW%WALL_INDEX_P)
          ELSE
             B1%HEAT_TRANS_COEF = 0._EB
          ENDIF
       ENDDO
    ENDIF
END SUBROUTINE C_FDS_WALL_BC_PREPROCESSING_KERNEL

RECURSIVE SUBROUTINE C_FDS_WALL_BC_PROCESS_CELLS_KERNEL(NM, T, DT, DT_BC, CALL_HT_1D) &
    BIND(C, NAME="fds_wall_bc_process_cells_kernel")
    USE WALL_ROUTINES, ONLY: WALL_BC_PROCESS_CELLS_KERNEL
    USE MESH_VARIABLES, ONLY: MESHES
    INTEGER(C_INT), VALUE :: NM, CALL_HT_1D
    REAL(C_DOUBLE), VALUE :: T, DT, DT_BC
    LOGICAL :: HT_1D_FLAG
    HT_1D_FLAG = (CALL_HT_1D /= 0)
    CALL WALL_BC_PROCESS_CELLS_KERNEL(MESHES(NM), NM, PREDICTOR, T, DT, DT_BC, HT_1D_FLAG)
END SUBROUTINE C_FDS_WALL_BC_PROCESS_CELLS_KERNEL

SUBROUTINE C_FDS_WALL_BC_FINALIZE(NM, T, DT_BC, CALL_HT_1D) &
    BIND(C, NAME="fds_wall_bc_finalize")
    USE WALL_ROUTINES, ONLY: WALL_BC_FINALIZE
    INTEGER(C_INT), VALUE :: NM, CALL_HT_1D
    REAL(C_DOUBLE), VALUE :: T, DT_BC
    LOGICAL :: HT_1D_FLAG
    HT_1D_FLAG = (CALL_HT_1D /= 0)
    CALL WALL_BC_FINALIZE(NM, T, DT_BC, HT_1D_FLAG)
END SUBROUTINE C_FDS_WALL_BC_FINALIZE

SUBROUTINE C_FDS_CC_VELOCITY_BC(T, NM, ESTIMATED) &
    BIND(C, NAME="fds_cc_velocity_bc")
    REAL(C_DOUBLE), VALUE :: T
    INTEGER(C_INT), VALUE :: NM, ESTIMATED
    IF (CC_IBM) CALL CC_VELOCITY_BC(T, NM, &
        APPLY_TO_ESTIMATED_VARIABLES=(ESTIMATED/=0), &
        DO_IBEDGES=.TRUE.)
END SUBROUTINE C_FDS_CC_VELOCITY_BC

SUBROUTINE C_FDS_CC_PROJECT_VELOCITY(NM, DT, STORE_FLAG) &
    BIND(C, NAME="fds_cc_project_velocity")
    USE MESH_POINTERS
    INTEGER(C_INT), VALUE :: NM, STORE_FLAG
    REAL(C_DOUBLE), VALUE :: DT
    IF (CC_IBM) THEN
        CALL POINT_TO_MESH(NM)
        CALL CC_PROJECT_VELOCITY(NM, DT, &
            STORE_FLG=(STORE_FLAG/=0))
    ENDIF
END SUBROUTINE C_FDS_CC_PROJECT_VELOCITY

!> Apply WALL_VELOCITY_NO_GRADH for sparse pressure solvers.
!> Must be called after CC_PROJECT_VELOCITY in VELOCITY_PREDICTOR/CORRECTOR.
!> Only active for GLMAT/UGLMAT/ULMAT solvers; no-op for FFT.
SUBROUTINE C_FDS_WALL_VELOCITY_NO_GRADH(NM, DT, STORE_FLAG) &
    BIND(C, NAME="fds_wall_velocity_no_gradh")
    USE MESH_POINTERS
    INTEGER(C_INT), VALUE :: NM, STORE_FLAG
    REAL(C_DOUBLE), VALUE :: DT
    CALL POINT_TO_MESH(NM)
    SELECT CASE(PRES_FLAG)
        CASE(GLMAT_FLAG,UGLMAT_FLAG,ULMAT_FLAG)
            CALL WALL_VELOCITY_NO_GRADH(DT, (STORE_FLAG/=0))
    END SELECT
END SUBROUTINE C_FDS_WALL_VELOCITY_NO_GRADH

!==============================================================================
! Output subroutines
!==============================================================================

SUBROUTINE C_FDS_UPDATE_GLOBAL_OUTPUTS(T, DT, NM) BIND(C, NAME="fds_update_global_outputs")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL UPDATE_GLOBAL_OUTPUTS(T, DT, NM)
END SUBROUTINE C_FDS_UPDATE_GLOBAL_OUTPUTS

SUBROUTINE C_FDS_DUMP_MESH_OUTPUTS(T, DT, NM) BIND(C, NAME="fds_dump_mesh_outputs")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: NM
    CALL DUMP_MESH_OUTPUTS(T, DT, NM)
END SUBROUTINE C_FDS_DUMP_MESH_OUTPUTS

SUBROUTINE C_FDS_EXCHANGE_GLOBAL_OUTPUTS(T, DT) BIND(C, NAME="fds_exchange_global_outputs")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL EXCHANGE_GLOBAL_OUTPUTS_DRIVER(T, DT)
END SUBROUTINE C_FDS_EXCHANGE_GLOBAL_OUTPUTS

SUBROUTINE C_FDS_UPDATE_CONTROLS(T, DT) BIND(C, NAME="fds_update_controls")
    REAL(C_DOUBLE), VALUE :: T, DT
    LOGICAL :: CTRL_STOP_LOCAL
    CTRL_STOP_LOCAL = .FALSE.
    CALL UPDATE_CONTROLS(T, DT, CTRL_STOP_LOCAL, .FALSE.)
    IF (CTRL_STOP_LOCAL) STOP_STATUS = CTRL_STOP
END SUBROUTINE C_FDS_UPDATE_CONTROLS

SUBROUTINE C_FDS_DUMP_GLOBAL_OUTPUTS(T, DT) BIND(C, NAME="fds_dump_global_outputs")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL DUMP_GLOBAL_OUTPUTS_DRIVER(T, DT)
END SUBROUTINE C_FDS_DUMP_GLOBAL_OUTPUTS

SUBROUTINE C_FDS_WRITE_STRINGS(T, DT) BIND(C, NAME="fds_write_strings")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL WRITE_STRINGS_DRIVER(T, DT)
END SUBROUTINE C_FDS_WRITE_STRINGS

SUBROUTINE C_FDS_WRITE_DIAGNOSTICS(T, DT) BIND(C, NAME="fds_write_diagnostics")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL WRITE_DIAGNOSTICS_DRIVER(T, DT)
END SUBROUTINE C_FDS_WRITE_DIAGNOSTICS

SUBROUTINE C_FDS_FLUSH_OUTPUT_FILES() BIND(C, NAME="fds_flush_output_files")
    ! Flush all open Fortran I/O units to ensure outputs are written to disk
    ! This is needed before timeout kills the process in case of graph termination hang
    CALL FLUSH()
END SUBROUTINE C_FDS_FLUSH_OUTPUT_FILES

SUBROUTINE C_FDS_SET_DIAGNOSTICS(ICYC_IN, T_IN, DT_IN) BIND(C, NAME="fds_set_diagnostics")
    REAL(C_DOUBLE), VALUE :: T_IN, DT_IN
    INTEGER(C_INT), VALUE :: ICYC_IN
    CALL SET_DIAGNOSTICS_DRIVER(ICYC_IN, T_IN, DT_IN)
END SUBROUTINE C_FDS_SET_DIAGNOSTICS

!==============================================================================
! Barrier / exchange subroutines (called from state managers)
!==============================================================================

SUBROUTINE C_FDS_MESH_EXCHANGE(CODE) BIND(C, NAME="fds_mesh_exchange")
    INTEGER(C_INT), VALUE :: CODE
    CALL MESH_EXCHANGE_DRIVER(CODE, 0._EB, 0._EB)
END SUBROUTINE C_FDS_MESH_EXCHANGE

SUBROUTINE C_FDS_POST_RECEIVES(CODE) BIND(C, NAME="fds_post_receives")
    INTEGER(C_INT), VALUE :: CODE
    CALL POST_RECEIVES_DRIVER(CODE, 0._EB, 0._EB)
END SUBROUTINE C_FDS_POST_RECEIVES

SUBROUTINE C_FDS_PRESSURE_ITERATION(T, DT) BIND(C, NAME="fds_pressure_iteration")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL PRESSURE_ITERATION_SCHEME_DRIVER(T, DT)
END SUBROUTINE C_FDS_PRESSURE_ITERATION

SUBROUTINE C_FDS_INIT_DIV_INTEGRALS() BIND(C, NAME="fds_initialize_divergence_integrals")
    CALL INITIALIZE_DIVERGENCE_INTEGRALS_DRIVER()
END SUBROUTINE C_FDS_INIT_DIV_INTEGRALS

SUBROUTINE C_FDS_EXCHANGE_DIV_INFO() BIND(C, NAME="fds_exchange_divergence_info")
    CALL EXCHANGE_DIVERGENCE_INFO_DRIVER(0._EB, 0._EB)
END SUBROUTINE C_FDS_EXCHANGE_DIV_INFO

SUBROUTINE C_FDS_ACCUMULATE_RAD_SUMS(RAD_Q_PARTIAL, KFST4_PARTIAL) &
    BIND(C, NAME="fds_accumulate_rad_sums")
    REAL(C_DOUBLE), VALUE :: RAD_Q_PARTIAL, KFST4_PARTIAL
    RAD_Q_SUM = RAD_Q_SUM + RAD_Q_PARTIAL
    KFST4_SUM = KFST4_SUM + KFST4_PARTIAL
END SUBROUTINE C_FDS_ACCUMULATE_RAD_SUMS

SUBROUTINE C_FDS_CREATE_REMOVE_OBST(T, DT) BIND(C, NAME="fds_create_or_remove_obstructions")
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL CREATE_OR_REMOVE_OBSTRUCTIONS_DRIVER(T, DT)
END SUBROUTINE C_FDS_CREATE_REMOVE_OBST

SUBROUTINE C_FDS_GLOBAL_MATRIX_REASSIGN(FORCE) BIND(C, NAME="fds_global_matrix_reassign")
    INTEGER(C_INT), VALUE :: FORCE
    CALL GLOBAL_MATRIX_REASSIGN_DRIVER(FORCE_REASSIGN=(FORCE/=0), T=0._EB, DT=0._EB)
END SUBROUTINE C_FDS_GLOBAL_MATRIX_REASSIGN

SUBROUTINE C_FDS_RTE_CORRECTION() BIND(C, NAME="fds_rte_source_correction")
    IF (RTE_SOURCE_CORRECTION) CALL CALCULATE_RTE_SOURCE_CORRECTION_FACTOR_DRIVER()
END SUBROUTINE C_FDS_RTE_CORRECTION

SUBROUTINE C_FDS_STOP_CHECK(END_CODE, T, DT) BIND(C, NAME="fds_stop_check")
    INTEGER(C_INT), VALUE :: END_CODE
    REAL(C_DOUBLE), VALUE :: T, DT
    CALL STOP_CHECK_DRIVER(END_CODE, T, DT)
END SUBROUTINE C_FDS_STOP_CHECK

FUNCTION C_FDS_GET_STOP_STATUS() RESULT(STATUS_OUT) BIND(C, NAME="fds_get_stop_status")
    INTEGER(C_INT) :: STATUS_OUT
    STATUS_OUT = STOP_STATUS
END FUNCTION C_FDS_GET_STOP_STATUS

SUBROUTINE C_FDS_SYNTHETIC_TURBULENCE(DT, T, NM) BIND(C, NAME="fds_synthetic_turbulence")
    REAL(C_DOUBLE), VALUE :: DT, T
    INTEGER(C_INT), VALUE :: NM
    IF (SYNTHETIC_EDDY_METHOD) CALL SYNTHETIC_TURBULENCE(DT, T, NM)
END SUBROUTINE C_FDS_SYNTHETIC_TURBULENCE

SUBROUTINE C_FDS_HVAC_CALC(T, DT, FIRST) BIND(C, NAME="fds_hvac_calc")
    REAL(C_DOUBLE), VALUE :: T, DT
    INTEGER(C_INT), VALUE :: FIRST
    IF (HVAC_SOLVE) CALL HVAC_CALC(T, DT, (FIRST/=0))
END SUBROUTINE C_FDS_HVAC_CALC

SUBROUTINE C_FDS_SET_BAROCLINIC(NM) BIND(C, NAME="fds_set_baroclinic_false")
    INTEGER(C_INT), VALUE :: NM
    IF (.NOT.SOLID_PHASE_ONLY .AND. .NOT.FREEZE_VELOCITY) MESHES(NM)%BAROCLINIC_TERMS_ATTACHED = .FALSE.
END SUBROUTINE C_FDS_SET_BAROCLINIC

!==============================================================================
! WALL_BC helper functions
!==============================================================================

FUNCTION C_FDS_COMPUTE_WALL_BC_DT_BC(T) RESULT(DT_BC_OUT) BIND(C, NAME="fds_compute_wall_bc_dt_bc")
    USE MESH_VARIABLES, ONLY: MESHES
    REAL(C_DOUBLE), VALUE :: T
    REAL(C_DOUBLE) :: DT_BC_OUT
    ! Compute DT_BC same way as WALL_BC does (wall.f90:96)
    ! BC_CLOCK is mesh-specific, use first mesh (all meshes have same BC_CLOCK value)
    DT_BC_OUT = T - MESHES(1)%BC_CLOCK
END FUNCTION C_FDS_COMPUTE_WALL_BC_DT_BC

SUBROUTINE C_FDS_INCREMENT_WALL_COUNTER() BIND(C, NAME="fds_increment_wall_counter")
    USE GLOBAL_CONSTANTS, ONLY: WALL_COUNTER
    ! Increment WALL_COUNTER BEFORE checking CALL_HT_1D (main.f90:868)
    WALL_COUNTER = WALL_COUNTER + 1
END SUBROUTINE C_FDS_INCREMENT_WALL_COUNTER

FUNCTION C_FDS_CHECK_CALL_HT_1D() RESULT(CALL_HT_1D_OUT) BIND(C, NAME="fds_check_call_ht_1d")
    USE GLOBAL_CONSTANTS, ONLY: WALL_COUNTER, WALL_INCREMENT
    INTEGER(C_INT) :: CALL_HT_1D_OUT
    ! Check if we should call 1-D heat transfer (wall.f90:95-98)
    IF (.NOT.INITIALIZATION_PHASE .AND. CORRECTOR) THEN
        IF (WALL_COUNTER == WALL_INCREMENT) THEN
            CALL_HT_1D_OUT = 1
        ELSE
            CALL_HT_1D_OUT = 0
        ENDIF
    ELSE
        CALL_HT_1D_OUT = 0
    ENDIF
END FUNCTION C_FDS_CHECK_CALL_HT_1D

SUBROUTINE C_FDS_RESET_WALL_COUNTER() BIND(C, NAME="fds_reset_wall_counter")
    USE GLOBAL_CONSTANTS, ONLY: WALL_COUNTER, WALL_INCREMENT
    ! Reset WALL_COUNTER AFTER WALL_BC loop (main.f90:872)
    IF (WALL_COUNTER == WALL_INCREMENT) WALL_COUNTER = 0
END SUBROUTINE C_FDS_RESET_WALL_COUNTER

SUBROUTINE C_FDS_UPDATE_BC_CLOCK(T) BIND(C, NAME="fds_update_bc_clock")
    USE MESH_VARIABLES, ONLY: MESHES
    REAL(C_DOUBLE), VALUE :: T
    INTEGER :: NM
    ! Update BC_CLOCK and HT_3D_SWEEP_DIRECTION (wall.f90:97-100)
    ! These are mesh-specific variables, update for all local meshes
    DO NM = LOWER_MESH_INDEX, UPPER_MESH_INDEX
        MESHES(NM)%BC_CLOCK = T
        MESHES(NM)%HT_3D_SWEEP_DIRECTION = MESHES(NM)%HT_3D_SWEEP_DIRECTION + 1
        IF (MESHES(NM)%HT_3D_SWEEP_DIRECTION > 3) MESHES(NM)%HT_3D_SWEEP_DIRECTION = 1
    ENDDO
END SUBROUTINE C_FDS_UPDATE_BC_CLOCK

END MODULE FDS_C_INTERFACE
